// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select create component 1`] = `
<Select
  closeAfterSelect={true}
  defaultValue=""
  noMatchText="暂无匹配数据"
  onChange={[Function]}
  onSearch={[Function]}
  selectAllText="全选"
  value=""
>
  <div
    className="el-select-wrapper"
  >
    <Input
      autoComplete="off"
      icon={
        <i
          className="el-caret"
        />
      }
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onPressEnter={[Function]}
      readOnly={true}
      type="text"
      value=""
    >
      <div
        className="el-input"
      >
        <span
          className="el-input-icon"
          onClick={[Function]}
        >
          <i
            className="el-caret"
          />
        </span>
        <input
          autoComplete="off"
          onChange={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
    </Input>
  </div>
</Select>
`;

exports[`Select define closeAfterSelect 1`] = `
<div
  className="el-select-wrapper"
>
  <Input
    autoComplete="off"
    icon={
      <i
        className="el-caret"
      />
    }
    onChange={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPressEnter={[Function]}
    readOnly={true}
    type="text"
    value=""
  />
</div>
`;

exports[`Select define disabled 1`] = `
<Select
  closeAfterSelect={true}
  defaultValue=""
  disabled={true}
  noMatchText="暂无匹配数据"
  onChange={[Function]}
  onSearch={[Function]}
  selectAllText="全选"
  value=""
>
  <div
    className="el-select-wrapper"
  >
    <Input
      autoComplete="off"
      disabled={true}
      icon={
        <i
          className="el-caret"
        />
      }
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onPressEnter={[Function]}
      readOnly={true}
      type="text"
      value=""
    >
      <div
        className="el-input"
      >
        <span
          className="el-input-icon"
          onClick={[Function]}
        >
          <i
            className="el-caret"
          />
        </span>
        <input
          autoComplete="off"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
    </Input>
  </div>
</Select>
`;

exports[`Select define size[large] 1`] = `
<Select
  closeAfterSelect={true}
  defaultValue=""
  noMatchText="暂无匹配数据"
  onChange={[Function]}
  onSearch={[Function]}
  selectAllText="全选"
  size="large"
  value=""
>
  <div
    className="el-select-wrapper el-large"
  >
    <Input
      autoComplete="off"
      icon={
        <i
          className="el-caret"
        />
      }
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onPressEnter={[Function]}
      readOnly={true}
      size="large"
      type="text"
      value=""
    >
      <div
        className="el-input el-large"
      >
        <span
          className="el-input-icon"
          onClick={[Function]}
        >
          <i
            className="el-caret"
          />
        </span>
        <input
          autoComplete="off"
          onChange={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
    </Input>
  </div>
</Select>
`;

exports[`Select define size[small] 1`] = `
<Select
  closeAfterSelect={true}
  defaultValue=""
  noMatchText="暂无匹配数据"
  onChange={[Function]}
  onSearch={[Function]}
  selectAllText="全选"
  size="small"
  value=""
>
  <div
    className="el-select-wrapper el-small"
  >
    <Input
      autoComplete="off"
      icon={
        <i
          className="el-caret"
        />
      }
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onPressEnter={[Function]}
      readOnly={true}
      size="small"
      type="text"
      value=""
    >
      <div
        className="el-input el-small"
      >
        <span
          className="el-input-icon"
          onClick={[Function]}
        >
          <i
            className="el-caret"
          />
        </span>
        <input
          autoComplete="off"
          onChange={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
    </Input>
  </div>
</Select>
`;

exports[`Select define style 1`] = `
<div
  className="el-select-wrapper"
  style={
    Object {
      "width": 100,
    }
  }
>
  <Input
    autoComplete="off"
    icon={
      <i
        className="el-caret"
      />
    }
    onChange={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onPressEnter={[Function]}
    readOnly={true}
    type="text"
    value=""
  />
</div>
`;
